# pyodd

./: README.md  build.byk.json  byk.json
ai-chat/: pyproject.toml
ai-chat/aichat/: cli.py  renderer.py  service.py
dy-parsing-download/: README.md  pyproject.toml
dy-parsing-download/dyparsing/: __main__.py  base_crawler.py  cli.py  logger.py  utils.py
dy-parsing-download/dyparsing/douyin/: __init__.py  config.yaml  crawler.py  models.py  utils.py
html/: hand_gesture.html
scripts/: jiahao.py  popup.py
