[project]
name = "dy-parsing-download"
version = "0.1.1"
description = "Douyin video parsing and downloading tool"
requires-python = ">=3.10"
dependencies = [
    "byksdk>=0.1.0,<1.2.0",
    "httpx>=0.28.0",
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "rich>=13.0",
    "gmssl>=3.0",
    "click>=8.0",
]

[tool.setuptools.packages.find]
include = ["dyparsing*"]

[tool.setuptools.package-data]
dyparsing = ["douyin/config.yaml"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"